2007-12-07  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_sm.erl: Bugfix

2007-12-07  Badlop  <badlop@process-one.net>

	* src/Makefile.in: Fix compilation warnings: Part 5: To fix a
	warning about behaviour undefined, the erlang module that
	implements the behaviour must be compiled before the module that
	uses such behaviour (EJAB-290)

	* src/eldap/eldap.erl: Fix compilation warnings: Part 4 (EJAB-290)
	* src/web/ejabberd_web_admin.erl: Likewise

	* src/mod_irc/iconv.erl: Fix compilation warnings: 3 (EJAB-290)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_irc/mod_irc_connection.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/stringprep/stringprep.erl: Likewise
	* src/web/ejabberd_http.erl: Likewise
	* src/web/ejabberd_http_poll.erl: Likewise

	* src/mod_caps.erl: Fix compilation warnings: Part 2 (EJAB-290)
	* src/mod_configure.erl: Likewise
	* src/mod_configure2.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_shared_roster.erl: Likewise
	* src/mod_stats.erl: Likewise
	* src/mod_version.erl: Likewise

	* src/cyrsasl.erl: Fix compilation warnings: Part 1 (EJAB-290)
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_config.erl: Likewise
	* src/ejabberd_hooks.erl: Likewise
	* src/ejabberd_s2s_out.erl: Likewise
	* src/ejabberd_sm.erl: Likewise
	* src/idna.erl: Likewise
	* src/jd2ejd.erl: Likewise

2007-12-06  Badlop  <badlop@process-one.net>

	* src/**/*.erl: Remove Erlang module attribute 'vsn' because it
	doesn't provide any worth feature, and it difficults hot code
	update (EJAB-440)

	* src/ejabberdctl.cfg.example: Explain that each connection uses
	two or three ports (thanks to Max Loparyev)

	* src/configure: Regenerated
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

	* doc/introduction.tex: Updated number of translated languages

	* src/web/ejabberd_web_admin.erl: Support more native acl_type on
	web interface (EJAB-253)
